# freelance-demos

./: .gitignore  CLAUDE.md  LICENSE  README.md
doc-extractor/: README.md
doc-extractor-preview/: README.md
doc-extractor-preview/docs/: stack.md
doc-extractor-preview/src/: main.py
doc-extractor-preview/tests/: test_schema.py
doc-extractor/data/samples/: README.md
doc-extractor/docs/: architecture.md
doc-extractor/src/: extractor.py  main.py  parser.py  schema.py
docx-standardizer/: .env.example  .gitignore  README.md  extract.py  master.docx  normalize.py  providers.py  pyproject.toml  rebuild.py  schema.py  standardize.py
docx-standardizer/docs/: preview-tools.md
docx-standardizer/input/: sample_policy.docx  sample_procedure.docx  sample_sop.docx
docx-standardizer/scripts/: generate_samples.py
docx-standardizer/tests/: test_extract.py  test_normalize.py  test_pipeline.py  test_rebuild.py
file-organizer/: .gitignore  README.md  config.py  organizer.py  pyproject.toml  rules.example.yaml
file-organizer/actions/: __init__.py  move.py
file-organizer/demo_assets/: notes.txt  script.py
file-organizer/sample_data/: README.md
file-organizer/tests/: test_config.py  test_latency.py  test_rules.py
minimal-rag-chat/: .gitignore  README.md  config.py  ingest.py  loaders.py  providers.py  pyproject.toml  rag.example.yaml  ragchat.py  retrieve.py
minimal-rag-chat/sample_data/: README.md  api_reference.md  company_handbook.md  product_faq.md
minimal-rag-chat/tests/: conftest.py  test_config.py  test_ingest.py  test_integration.py  test_loaders.py  test_retrieve.py
mna-extractor/: .env.example  README.md  pyproject.toml
mna-extractor-demo/: .gitignore  README.md
mna-extractor-demo/data/: sample_input.csv
mna-extractor-demo/src/mna_extractor/: __init__.py  excel_writer.py  pipeline.py
mna-extractor/src/mna_extractor/: cli.py  fetcher.py  flagger.py  llm_extractor.py  schema.py
multi-tenant-rag-saas/: .gitignore  README.md
multi-tenant-rag-saas/docs/: architecture.md  stack.md
multi-tenant-rag-saas/src/admin/: main.py
multi-tenant-rag-saas/src/admin/services/: token_tracker.py
multi-tenant-rag-saas/src/app/: main.py
multi-tenant-rag-saas/src/frontend/app/chat/: page.tsx
multi-tenant-rag-saas/src/share/: models.py
multi-tenant-rag-saas/src/ws/: main.py
multi-tenant-rag-saas/tests/: test_token_tracker.py
sapphire-studios-promo/: README.md  index.html  meta.json
sapphire-studios-promo/public/audio/: synth_bgm.sh
social-crawler/: .env.example  .gitignore  README.md  pyproject.toml  scrapy.cfg
social-crawler/docs/: architecture.md  stack.md
social-crawler/examples/: sample_output.jsonl
social-crawler/scripts/: start_chrome_cdp.py
social-crawler/social_crawler/: items.py  middlewares.py  pipelines.py  settings.py
social-crawler/social_crawler/spiders/: facebook_public_page.py  instagram_public_profile.py  tiktok_public_profile.py  twitter_public_profile.py
social-crawler/src/social_crawler/: __init__.py  anti_bot.py  browser.py  config.py  items.py  main.py  nav.py  pipelines.py
social-crawler/src/social_crawler/spiders/: fb_feed.py  instagram_profile.py  tiktok_hashtag.py  tiktok_user.py  tiktok_video.py  twitter_user.py
social-crawler/tests/: test_items.py
social_crawler_demo/: .gitignore  README.md  pyproject.toml
social_crawler_demo/demo/: items.py  settings.py
social_crawler_demo/demo/spiders/: facebook_public_page.py  instagram_public_profile.py  twitter_public_profile.py
social_crawler_demo/examples/: sample_output.jsonl
social_crawler_demo/scripts/: start_chrome_cdp.py
social_crawler_demo/tests/: test_items.py
video-creation-pipeline/: ARCHITECTURE.md  README.md  pyproject.toml
video-creation-pipeline/demo/: blender_render.py  ffmpeg_export.sh  pipeline.py  prompt.txt
